# redact-engine

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: data.rs  lib.rs  (+2 more)
text-redaction/: Cargo.toml
text-redaction/benches/: README.md  redact_json.rs  redact_str.rs
text-redaction/examples/: README.md  custom_reduct_placeholder.rs  redaction_json.rs  redaction_json_by_keys.rs  redaction_json_by_path.rs  redaction_reader.rs  redaction_value.rs  redaction_values.rs
text-redaction/examples/redact-from-config/: Cargo.toml  README.md
text-redaction/src/: data.rs  json.rs  lib.rs  pattern.rs  redaction.rs
text-redaction/src/snapshots/: text_redaction__engine__test_engine__can_try_capture.snap  text_redaction__engine__test_engine__can_try_capture_with_info.snap  text_redaction__json__test_redaction__can_redact_value_array.snap  text_redaction__json__test_redaction__can_redact_value_by_key.snap  text_redaction__json__test_redaction__can_redact_value_by_path.snap  text_redaction__json__test_redaction__can_redact_value_by_prefix_path.snap  text_redaction__json__test_redaction__can_redact_value_combination.snap  text_redaction__pattern__test_pattern__can_redact_multiple_patterns.snap  text_redaction__pattern__test_pattern__can_redact_patterns.snap  text_redaction__pattern__test_pattern__can_redact_patterns_with_info.snap  text_redaction__pattern__test_pattern__can_try_capture.snap  text_redaction__pattern__test_pattern__can_try_capture_with_info.snap  text_redaction__redaction__test_redaction__bt_value.snap  text_redaction__redaction__test_redaction__by_pattern.snap  text_redaction__redaction__test_redaction__can_redact_json.snap  text_redaction__redaction__test_redaction__can_redact_reader.snap  text_redaction__redaction__test_redaction__can_redact_reader_with_info.snap  (+4 more)
(+66 files in other folders)
