[package]
name = "text-redaction"
version = "0.1.0"
edition = "2021"
authors = ["Elad Kaplan <kaplan.elad@gmail.com>"]
license = "Apache-2.0"
description = ""
homepage = "https://github.com/rusty-ferris-club/text-redaction"
repository = "https://github.com/rusty-ferris-club/text-redaction"
documentation = "https://docs.rs/text-redaction/latest/text-redaction/"
readme = "../README.md"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "text_redaction"

[dependencies]
serde = "1"
serde_derive = "1"
serde_regex = "1.1.0"
anyhow = "1.0.65"
regex = "1.6.0"
rayon = "1.5.3"

serde_json = { version = "1.0.85", optional = true }
bytecount = { version = "0.6.3", optional = true }

[dev-dependencies]
insta = "1.21.0"
criterion = {version = "0.4.0", features = ["html_reports"]}
rand = "0.8.5"

[features]
default = []
redact-json = ["dep:serde_json"]
redact-info = ["dep:bytecount"]

all = [
    "redact-json",
    "redact-info"
]

[[example]]
name = "redaction_json_by_keys"
path = "examples/redaction_json_by_keys.rs"
required-features = ["redact-json"]

[[example]]
name = "redaction_json_by_path"
path = "examples/redaction_json_by_path.rs"
required-features = ["redact-json"]

[[example]]
name = "redaction_json"
path = "examples/redaction_json.rs"
required-features = ["redact-json"]

[[example]]
name = "redaction_string_with_info"
path = "examples/redaction_string_with_info.rs"
required-features = ["redact-info"]

[[bench]]
name = "redact_str"
harness = false
required-features = ["redact-info"]

[[bench]]
name = "redact_json"
harness = false
required-features = ["redact-json"]
